# gnome-dns-switcher

./: .gitignore  README.md  __main__.py  async_helpers.py  config.sample.yml  indicator.py  main.py  nmcli.py  setup.cfg  setup.py
dnsswitcher/: dnsswitcher.py
gnome_dns_switcher/: __main__.py
gnome_dns_switcher/gnome_helpers/: indicator.py  nmcli.py
gnome_dns_switcher/switcher/: __init__.py  dnsswitcher.py  server.py
gnome_helpers/: __init__.py  indicator.py
