[metadata]
name = gnome-dns-switcher
version = 1.3.0
description = DNS Switcher for Ubuntu Gnome
long_description = file: README.md
long_description_content_type = text/markdown
author = Anner Visser
author_email = mail@annervisser.nl
maintainer = Anner Visser
maintainer_email = mail@annervisser.nl
license = GPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Utilities
keywords = gnome, ubuntu, dns, appindicator
project_urls =
    Source=https://github.com/annervisser/gnome-appindicator-dns-switcher/
    Issues=https://github.com/annervisser/gnome-appindicator-dns-switcher/issues

[options]
packages = find:
install_requires =
    pyyaml>=5
    PyGObject>=3.36.0
    pycairo>=1.16.0
    six>=1.9.0,<2
python_requires = >=3.6

[options.entry_points]
console_scripts =
    gnome-dns-switcher=gnome_dns_switcher.__main__:main